--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -182,7 +182,7 @@
                 <h2>Certificates</h2>
                 <div class="certificates-grid">
                     <div class="certificate-item">
-                        <img src="profile\11111.png" alt="Blockchain Certificate">
+                        <img src="profile\Blockchain.png" alt="Blockchain Certificate">
                         <h3>Blockchain</h3>
                         <p>Completed a course on Blockchain technology.</p>
                         <a href="https://drive.google.com/file/d/1VhibgQPXdjNu4C3YM449lVBMBY-zxGUz/view?usp=drive_link" class="btn">View Certificate</a>
