--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,7 +10,7 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop id="bg-video">
-            <source src="profile\backgroundvideo3.mp4" type="video/mp4">
+            <source src="assets/backgroundvideo3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -40,14 +40,14 @@
                 <h2>About Me</h2>
                 <div class="about-content">
                     <div class="devpic">
-                        <img src="profile/Pic1.jpg" alt="Sahil Singh">
+                        <img src="assets/Pic1.jpg" alt="Sahil Singh">
                     </div>
                     <div class="bio">
                         <p class="hello">Hi, I'm</p>
                         <p class="name">Sahil Singh</p>
                         <p class="about">Developer, Traveller & Reader. I'm from Jamshedpur, Jharkhand, and currently pursuing a Bachelor's Degree at Chandigarh University.</p>
                         <div class="buttons">
-                            <a href="profile/Sahil_CV.pdf" download class="btn">Download CV</a>
+                            <a href="assets/Sahil_CV.pdf" download class="btn">Download CV</a>
                             <a href="mailto:sahilsingh1696i@gmail.com" class="btn">Contact Me</a>
                         </div>
                     </div>
@@ -61,19 +61,19 @@
                 <h2>Education</h2>
                 <div class="education-grid">
                     <div class="education-item">
-                        <img src="profile/CU.jpeg" alt="Chandigarh University">
+                        <img src="assets/CU.jpeg" alt="Chandigarh University">
                         <h3>Chandigarh University</h3>
                         <p>2023 - Present</p>
                         <p>Bachelor's Degree</p>
                     </div>
                     <div class="education-item">
-                        <img src="profile/idtr.jpeg" alt="Indo Danish Tool Room">
+                        <img src="assets/idtr.jpeg" alt="Indo Danish Tool Room">
                         <h3>Indo Danish Tool Room</h3>
                         <p>2018 - 2022</p>
                         <p>Diploma in Mechanical Engineering</p>
                     </div>
                     <div class="education-item">
-                        <img src="profile/gulmohur.jpeg" alt="Gulmohur High School">
+                        <img src="assets/gulmohur.jpeg" alt="Gulmohur High School">
                         <h3>Gulmohur High School</h3>
                         <p>2017 - 2018</p>
                         <p>High School Diploma</p>
@@ -133,12 +133,12 @@
                 <h2>My Work</h2>
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
-                        <img src="profile/project1.jpg" alt="Project 1">
+                        <img src="assets/project1.jpg" alt="Project 1">
                         <h3>Geo-Location Tracker</h3>
                         <p>Introducing the cutting-edge Geo-Location Tracker...</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="profile/ATM.jpeg" alt="Project 2">
+                        <img src="assets/ATM.jpeg" alt="Project 2">
                         <h3>ATM Simulation System</h3>
                         <p>Created an ATM Simulation System, providing a realistic emulation of ATM transactions...</p>
                     </div>
@@ -152,21 +152,21 @@
                 <h2>Experience</h2>
                 <div class="experience-grid">
                     <div class="experience-item">
-                        <img src="profile/ttl.png" alt="TATA Technologies">
+                        <img src="assets/ttl.png" alt="TATA Technologies">
                         <h3>Intern at TATA Technologies</h3>
                         <p>2024</p>
                         <p>Completed an internship at TATA Technologies...</p>
                         <a href="https://drive.google.com/file/d/1Mk2xDkAc5xZ5UxlT9pGWsOQCmVAXVv74/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
-                        <img src="profile/tasl.jpeg" alt="TATA Advanced Systems">
+                        <img src="assets/tasl.jpeg" alt="TATA Advanced Systems">
                         <h3>Design Engineer at TATA Advanced Systems</h3>
                         <p>2022 - 2023</p>
                         <p>Worked as a Design Engineer at TASL, Hyderabad plant...</p>
                         <a href="https://drive.google.com/file/d/1NiyO1eLRFUhT_GUsU0ISFUOFWDWLCbww/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
-                        <img src="profile/cummins.jpeg" alt="TATA Cummins">
+                        <img src="assets/cummins.jpeg" alt="TATA Cummins">
                         <h3>Diploma Intern at TATA Cummins</h3>
                         <p>2021 - 2022</p>
                         <p>Completed a one-year internship at TATA Cummins...</p>
@@ -182,31 +182,31 @@
                 <h2>Certificates</h2>
                 <div class="certificates-grid">
                     <div class="certificate-item">
-                        <img src="profile\Blockchain.png" alt="Blockchain Certificate">
+                        <img src="assets/Blockchain.png" alt="Blockchain Certificate">
                         <h3>Blockchain</h3>
                         <p>Completed a course on Blockchain technology.</p>
                         <a href="https://drive.google.com/file/d/1VhibgQPXdjNu4C3YM449lVBMBY-zxGUz/view?usp=drive_link" class="btn">View Certificate</a>
                     </div>
                     <div class="certificate-item">
-                        <img src="profile\dnvv.png" alt="Catia Certificate">
+                        <img src="assets/dnvv.png" alt="Catia Certificate">
                         <h3>Catia</h3>
                         <p>Completed a course on Catia software.</p>
                         <a href="https://drive.google.com/file/d/12InhYWOreRwWyRTpoRZyAfbxc27uXPeD/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="certificate-item">
-                        <img src="profile\cloudcomputing.png" alt="Cloud Computing Certificate">
+                        <img src="assets/cloudcomputing.png" alt="Cloud Computing Certificate">
                         <h3>Cloud Computing</h3>
                         <p>Completed a course on Cloud Computing.</p>
                         <a href="https://drive.google.com/file/d/1x-bK1cd4z17A6LVYMX-tJ09efCoGuXZ-/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="certificate-item">
-                        <img src="profile\tata.png" alt="TATA Motors Certificate">
+                        <img src="assets/tata.png" alt="TATA Motors Certificate">
                         <h3>TATA Motors</h3>
                         <p>Completed an internship at TATA Motors.</p>
                         <a href="https://drive.google.com/file/d/1Mx-OxlGE6SXAR1r-J4M0nVyQCFgzRRLm/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="certificate-item">
-                        <img src="profile\chandigarhuniversity.png" alt="Class Representative Certificate">
+                        <img src="assets/chandigarhuniversity.png" alt="Class Representative Certificate">
                         <h3>Class Representative</h3>
                         <p>Served as Class Representative at Chandigarh University.</p>
                         <a href="https://drive.google.com/file/d/1NNa2kHCm3Hqe8Rz-JZYVl2llg9rcEKov/view?usp=sharing" class="btn">View Certificate</a>
