--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -219,7 +219,7 @@
         <section id="contact" class="section">
             <div class="container">
                 <h2>Contact Me</h2>
-                <form action="submit_form.php" method="POST">
+                <form action="mailto:sahilsingh1696i@gmail.com" method="GET" enctype="text/plain">
                     <div class="form-group">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" required>
@@ -234,7 +234,7 @@
                     </div>
                     <div class="form-group">
                         <label for="enquiry">Enquiry:</label>
-                        <textarea id="enquiry" name="enquiry" required></textarea>
+                        <textarea id="enquiry" name="body" required></textarea>
                     </div>
                     <button type="submit" class="btn">Submit</button>
                 </form>
