--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <p class="name">Sahil Singh</p>
                         <p class="about">Developer, Traveller & Reader. I'm from Jamshedpur, Jharkhand, and currently pursuing a Bachelor's Degree at Chandigarh University.</p>
                         <div class="buttons">
-                            <a href="https://drive.google.com/file/d/13t6mWLihHOseDy0a8wJPjq_GtbfBicSt/view?usp=sharing" download class="btn">Download CV</a>
+                            <a href="https://github.com/sahil1696i/Sahil-Portfolio/blob/main/assets/Sahil.pdf" download class="btn">Download CV</a>
                             <a href="mailto:sahilsingh1696i@gmail.com" class="btn">Contact Me</a>
                         </div>
                     </div>
