--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                         <h3>ATM Simulation System</h3>
                         <p>Created an ATM Simulation System, providing a realistic emulation of ATM transactions...</p>
                     </div>
+                    <div class="portfolio-item">
+                        <img src="assets/ATM.jpeg" alt="Project 2">
+                        <h3>ATM Simulation System</h3>
+                        <p>Created an ATM Simulation System, providing a realistic emulation of ATM transactions...</p>
+                    </div>
                 </div>
             </div>
         </section>
