--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
                         <a href="https://drive.google.com/file/d/1Mk2xDkAc5xZ5UxlT9pGWsOQCmVAXVv74/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
+                        <img src="assets/ttl.png" alt="TATA Technologies">
+                        <h3>Intern at TATA Technologies</h3>
+                        <p>2024</p>
+                        <p>Completed an internship at TATA Technologies...</p>
+                        <a href="https://drive.google.com/file/d/1Mk2xDkAc5xZ5UxlT9pGWsOQCmVAXVv74/view?usp=sharing" class="btn">View Certificate</a>
+                    </div>
+                    <div class="experience-item">
                         <img src="assets/tasl.jpeg" alt="TATA Advanced Systems">
                         <h3>Design Engineer at TATA Advanced Systems</h3>
                         <p>2022 - 2023</p>
