--- a/index.html
+++ b/index.html
@@ -151,11 +151,10 @@
                 <h2>Experience</h2>
                 <div class="experience-grid">
                     <div class="experience-item">
-                        <img src="assets/ttl.png" alt="TATA Technologies">
-                        <h3>Intern at TATA Technologies</h3>
+                        <img src="assets/CU.jpeg" alt="Chandigarh University">
+                        <h3>Management Team Member at CUEC.</h3>
                         <p>2024</p>
-                        <p>Completed an internship at TATA Technologies...</p>
-                        <a href="https://drive.google.com/file/d/1Mk2xDkAc5xZ5UxlT9pGWsOQCmVAXVv74/view?usp=sharing" class="btn">View Certificate</a>
+                        <a href="https://drive.google.com/file/d/135zuQPDheqrEvZNUSf70XubR8yidNhzc/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/ttl.png" alt="TATA Technologies">
