--- a/index.html
+++ b/index.html
@@ -153,28 +153,29 @@
                     <div class="experience-item">
                         <img src="assets/CU.jpeg" alt="Chandigarh University">
                         <h3>Management Team Member at CUEC.</h3>
+                        <p>Presenting the standing Committee of the CUEC club.</p>
                         <p>2024</p>
                         <a href="https://drive.google.com/file/d/135zuQPDheqrEvZNUSf70XubR8yidNhzc/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/ttl.png" alt="TATA Technologies">
                         <h3>Intern at TATA Technologies</h3>
+                        <p>Completed an internship at TATA Technologies.</p>
                         <p>2024</p>
-                        <p>Completed an internship at TATA Technologies...</p>
-                        <a href="https://drive.google.com/file/d/1Mk2xDkAc5xZ5UxlT9pGWsOQCmVAXVv74/view?usp=sharing" class="btn">View Certificate</a>
+                        <a href="https://drive.google.com/file/d/1YVutTcQbyTPSPylSzvBFsRmQtV3HrEzG/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/tasl.jpeg" alt="TATA Advanced Systems">
                         <h3>Design Engineer at TATA Advanced Systems</h3>
+                        <p>Worked as a Design Engineer at TASL, Hyderabad plant.</p>
                         <p>2022 - 2023</p>
-                        <p>Worked as a Design Engineer at TASL, Hyderabad plant...</p>
                         <a href="https://drive.google.com/file/d/1NiyO1eLRFUhT_GUsU0ISFUOFWDWLCbww/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/cummins.jpeg" alt="TATA Cummins">
                         <h3>Diploma Intern at TATA Cummins</h3>
+                        <p>Completed a one-year internship at TATA Cummins.</p>
                         <p>2021 - 2022</p>
-                        <p>Completed a one-year internship at TATA Cummins...</p>
                         <a href="https://drive.google.com/file/d/1NfNhlIAOtW7DBnrCz7ScY-wLwsEnoHJt/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                 </div>
