--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/sahil-singh-764253217" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/sahil1696i" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://leetcode.com/u/Sahil1696i" target="_blank"><i class="fab fa-download"></i></a>
+                <a href="https://leetcode.com/u/Sahil1696i" target="_blank"><i class="fab fa-leetcode"></i></a>
                 <a href="https://x.com/SahilSingh032" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <p>&copy; 2024 Sahil Singh. All rights reserved.</p>
@@ -262,3 +262,4 @@
     </footer>
 </body>
 </html>
+
