--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                 <h2>Experience</h2>
                 <div class="experience-grid">
                     <div class="experience-item">
-                        <img src="assets/CU.jpeg" alt="Chandigarh University">
-                        <h3>Management Team Member at CUEC.</h3>
-                        <p>Presenting the standing Committee of the CUEC club.</p>
-                        <p>2024</p>
-                        <a href="https://drive.google.com/file/d/135zuQPDheqrEvZNUSf70XubR8yidNhzc/view?usp=sharing" class="btn">View Certificate</a>
+                        <img src="assets/celebal.webp" alt="Celebal Technology">
+                        <h3>Intern at Celebal Technologies</h3>
+                        <p>Completed an internship at Celebal Technologies.</p>
+                        <p>2025</p>
+                        <a href="https://drive.google.com/file/d/13uES2eYwbzSvelJ91H3WdiMhOoira3qe/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/ttl.png" alt="TATA Technologies">
@@ -262,4 +262,5 @@
     </footer>
 </body>
 </html>
+
 
