--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                         <h3>Intern at Celebal Technologies</h3>
                         <p>Completed an internship at Celebal Technologies.</p>
                         <p>2025</p>
-                        <a href="https://drive.google.com/file/d/13uES2eYwbzSvelJ91H3WdiMhOoira3qe/view?usp=sharing" class="btn">View Certificate</a>
+                        <a href="https://drive.google.com/file/d/13uES2eYwbzSvelJ91H3WdiMhOoira3qe/view?usp=sharing"
+                            class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/ttl.png" alt="TATA Technologies">
@@ -262,5 +263,6 @@
     </footer>
 </body>
 </html>
+
 
 
