--- a/index.html
+++ b/index.html
@@ -163,21 +163,24 @@
                         <h3>Intern at TATA Technologies</h3>
                         <p>Completed an internship at TATA Technologies.</p>
                         <p>2024</p>
-                        <a href="https://drive.google.com/file/d/1YVutTcQbyTPSPylSzvBFsRmQtV3HrEzG/view?usp=sharing" class="btn">View Certificate</a>
+                        <a href="https://drive.google.com/file/d/1YVutTcQbyTPSPylSzvBFsRmQtV3HrEzG/view?usp=sharing" 
+                            class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/tasl.jpeg" alt="TATA Advanced Systems">
                         <h3>Design Engineer at TATA Advanced Systems</h3>
                         <p>Worked as a Design Engineer at TASL, Hyderabad plant.</p>
                         <p>2022 - 2023</p>
-                        <a href="https://drive.google.com/file/d/1NiyO1eLRFUhT_GUsU0ISFUOFWDWLCbww/view?usp=sharing" class="btn">View Certificate</a>
+                        <a href="https://drive.google.com/file/d/1NiyO1eLRFUhT_GUsU0ISFUOFWDWLCbww/view?usp=sharing" 
+                            class="btn">View Certificate</a>
                     </div>
                     <div class="experience-item">
                         <img src="assets/cummins.jpeg" alt="TATA Cummins">
                         <h3>Diploma Intern at TATA Cummins</h3>
                         <p>Completed a one-year internship at TATA Cummins.</p>
                         <p>2021 - 2022</p>
-                        <a href="https://drive.google.com/file/d/1NfNhlIAOtW7DBnrCz7ScY-wLwsEnoHJt/view?usp=sharing" class="btn">View Certificate</a>
+                        <a href="https://drive.google.com/file/d/1NfNhlIAOtW7DBnrCz7ScY-wLwsEnoHJt/view?usp=sharing" 
+                            class="btn">View Certificate</a>
                     </div>
                 </div>
             </div>
@@ -263,6 +266,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
