--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                         <p class="name">Sahil Singh</p>
                         <p class="about">Developer, Traveller & Reader. I'm from Jamshedpur, Jharkhand, and currently pursuing a Bachelor's Degree at Chandigarh University.</p>
                         <div class="buttons">
-                            <a href="https://drive.google.com/file/d/13t6mWLihHOseDy0a8wJPjq_GtbfBicSt/view?usp=sharing" download class="btn">Download CV</a>
+                            <a href="https://drive.google.com/file/d/16zxqBsFLERjrLwSg4PZDTdkMCDsMUdRM/view?usp=sharing" download
+                                class="btn">Download CV</a>
                         </div>
                     </div>
                 </div>
@@ -266,6 +267,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
