--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
             <div class="container">
                 <h2>Certificates</h2>
                 <div class="certificates-grid">
+                    
+                    <div class="certificate-item">
+                        <img src="assets/CU.jpeg" alt="Quantitative Certificate">
+                        <h3>Aptitude Certificate</h3>
+                        <p>Scored the highest marks in Aptitude Classes</p>
+                        <a href="https://drive.google.com/file/d/1JM9f2uhxHgyt6oF4XYwEWiUo7Af1HxfJ/view?usp=sharing" 
+                            class="btn">View Certificate</a>
+                    </div>
                     <div class="certificate-item">
                         <img src="assets/Blockchain.png" alt="Blockchain Certificate">
                         <h3>Blockchain</h3>
@@ -253,7 +261,7 @@
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/sahil-singh-764253217" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/sahil1696i" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://leetcode.com/u/Sahil1696i" target="_blank"><i class="fab fa-leetcode"></i></a>
+                <a href="https://leetcode.com/u/Sahil1696i" target="_blank"><i class="assets/leetcode.png"></i></a>
                 <a href="https://x.com/SahilSingh032" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <p>&copy; 2024 Sahil Singh. All rights reserved.</p>
@@ -261,6 +269,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
