--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="certificates-grid">
                     
                     <div class="certificate-item">
-                        <img src="assets/CU.jpeg" alt="Quantitative Certificate">
+                        <img src="assets/chandigarhuniversity.png" alt="Quantitative Certificate">
                         <h3>Aptitude Certificate</h3>
                         <p>Scored the highest marks in Aptitude Classes</p>
                         <a href="https://drive.google.com/file/d/1JM9f2uhxHgyt6oF4XYwEWiUo7Af1HxfJ/view?usp=sharing" 
@@ -269,6 +269,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
