--- a/index.html
+++ b/index.html
@@ -132,15 +132,23 @@
             <div class="container">
                 <h2>My Work</h2>
                 <div class="portfolio-grid">
-                    <div class="portfolio-item">
-                        <img src="assets/project1.jpg" alt="Project 1">
-                        <h3>Geo-Location Tracker</h3>
-                        <p>Introducing the cutting-edge Geo-Location Tracker...</p>
+                     <div class="portfolio-item">
+                        <img src="assets/waste management" alt="Project 1">
+                        <h3>Waste Management System using IOT.</h3>
+                         <p>It is an innovative solution for efficient waste management. It involves deploying smart bins equipped with sensors to monitor waste levels in real time.</p>
+                        <p>Tools used: Arduino, Ultrasonic Sensors.</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="assets/ATM.jpeg" alt="Project 2">
-                        <h3>ATM Simulation System</h3>
-                        <p>Created an ATM Simulation System, providing a realistic emulation of ATM transactions...</p>
+                        <img src="assets/project1.jpg" alt="Project 2">
+                        <h3>Geo-Location Tracker.</h3>
+                        <p>Created software utilizing a tool or system designed to determine and monitor the real-time location of a device or entity using GPS, cellular networks, or Wi-Fi signals.</p>
+                        <p>Tools used: Java, HTML, Java script.</p>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="assets/ATM.jpeg" alt="Project 3">
+                        <h3>ATM Simulation System.</h3>
+                        <p>Created an ATM simulation system, providing problem solving and realistic emulation of ATM transactions.</p>
+                        <p>Tools used: JAVA, .NET, SQL, XML.</p>
                     </div>
                 </div>
             </div>
@@ -268,6 +276,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
