--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <h2>My Work</h2>
                 <div class="portfolio-grid">
                      <div class="portfolio-item">
-                        <img src="assets/waste management" alt="Project 1">
+                        <img src="assets/waste management.jpg" alt="Project 1">
                         <h3>Waste Management System using IOT.</h3>
                          <p>It is an innovative solution for efficient waste management. It involves deploying smart bins equipped with sensors to monitor waste levels in real time.</p>
                         <p>Tools used: Arduino, Ultrasonic Sensors.</p>
@@ -276,6 +276,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
