--- a/index.html
+++ b/index.html
@@ -159,26 +159,17 @@
             <div class="container">
                 <h2>Experience</h2>
                 <div class="experience-grid">
-                    <div class="experience-item">
-                        <img src="assets/celebal.webp" alt="Celebal Technology">
-                        <h3>Intern at Celebal Technologies</h3>
-                        <p>Completed an internship at Celebal Technologies.</p>
-                        <p>2025</p>
-                        <a href="https://drive.google.com/file/d/13uES2eYwbzSvelJ91H3WdiMhOoira3qe/view?usp=sharing"
-                            class="btn">View Certificate</a>
+ <div class="experience-item">
+                        <img src="assets/tata.png" alt="TATA Motors Certificate">
+                        <h3>TATA Motors</h3>
+                        <p>As a Developer, I created software with my team to provide real-time vehicle tracking using a chip set and hardware devices. I also implemented OOP concepts like debugging and test cases/unit testing.</p>
+                        <a href="https://drive.google.com/file/d/1Mx-OxlGE6SXAR1r-J4M0nVyQCFgzRRLm/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
-                    <div class="experience-item">
-                        <img src="assets/ttl.png" alt="TATA Technologies">
-                        <h3>Intern at TATA Technologies</h3>
-                        <p>Completed an internship at TATA Technologies.</p>
-                        <p>2024</p>
-                        <a href="https://drive.google.com/file/d/1YVutTcQbyTPSPylSzvBFsRmQtV3HrEzG/view?usp=sharing" 
-                            class="btn">View Certificate</a>
-                    </div>
+                    
                     <div class="experience-item">
                         <img src="assets/tasl.jpeg" alt="TATA Advanced Systems">
                         <h3>Design Engineer at TATA Advanced Systems</h3>
-                        <p>Worked as a Design Engineer at TASL, Hyderabad plant.</p>
+                        <p>A good learner which is focused on learning new things in the field of designing with the C295 project for the Indian Airforce.</p>
                         <p>2022 - 2023</p>
                         <a href="https://drive.google.com/file/d/1NiyO1eLRFUhT_GUsU0ISFUOFWDWLCbww/view?usp=sharing" 
                             class="btn">View Certificate</a>
@@ -220,11 +211,13 @@
                         <p>Completed a course on Cloud Computing.</p>
                         <a href="https://drive.google.com/file/d/1x-bK1cd4z17A6LVYMX-tJ09efCoGuXZ-/view?usp=sharing" class="btn">View Certificate</a>
                     </div>
-                    <div class="certificate-item">
-                        <img src="assets/tata.png" alt="TATA Motors Certificate">
-                        <h3>TATA Motors</h3>
-                        <p>Completed an internship at TATA Motors.</p>
-                        <a href="https://drive.google.com/file/d/1Mx-OxlGE6SXAR1r-J4M0nVyQCFgzRRLm/view?usp=sharing" class="btn">View Certificate</a>
+                   <div class="certificate-item">
+                        <img src="assets/ttl.png" alt="TATA Technologies">
+                        <h3>Intern at TATA Technologies</h3>
+                        <p>Completed an internship at TATA Technologies.</p>
+                        <p>2024</p>
+                        <a href="https://drive.google.com/file/d/1YVutTcQbyTPSPylSzvBFsRmQtV3HrEzG/view?usp=sharing" 
+                            class="btn">View Certificate</a>
                     </div>
                     <div class="certificate-item">
                         <img src="assets/chandigarhuniversity.png" alt="Class Representative Certificate">
@@ -276,6 +269,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
